# my-career

./: .gitignore  CHANGELOG.md  DESIGN_HISTORY.md  README.md  main.py  pyproject.toml
auth-service/: Dockerfile  README.md  docker-compose.yml  main.py
docker/: .dockerignore  .env.template  Dockerfile  docker-compose-dev.yml  docker-compose.test.yml  docker-compose.yml
my-resume/: cover-letter.json  resume.json  roles.json
src/: .env.template
src/my_career/: config.py  logging_conf.py  logging_config.json  main.py
src/my_career/adapters/: openai_tailor.py  pdf_exporter.py  pydantic_utils.py
src/my_career/adapters/api/: ai_routes_cover_letter.py  ai_routes_resume.py  app.py  auth.py  error_handlers.py  routes_cover_letter.py  routes_health.py  routes_resume.py
src/my_career/domain/: __init__.py  convert_to_pdf.py  filters.py  letter_loader.py  main.py  models.py  prompt_handler.py  resume_loader.py
src/my_career/ports/: cover_letter_boundary.py  exporter.py  resume_boundary.py  tailor.py
src/my_career/use_cases/: ai_cover_letter.py  ai_resume.py  cover_letter.py  resume.py
templates/: cover_letter_template.html  custom_template.html  harvard_template.html  harvard_template_v2.html
tests/: conftest.py
tests/adapters/api/: test_ai_routes_cover_letter.py  test_ai_routes_resume.py  test_auth.py  test_error_handlers.py  test_routes_cover_letter.py  test_routes_resume.py
tests/use_cases/: test_ai_cover_letter_service.py  test_ai_resume_service.py  test_resume_service.py
