[project]
name = "my-career"
version = "0.0.4"
description = "Showcase of my full career"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "openai>=2.28.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "uvicorn>=0.42.0",
    "weasyprint>=68.1",
]
