[project]
name = "my-career"
version = "0.1.0"
description = "Showcase of my full career"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "openai>=2.28.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "uvicorn>=0.42.0",
    "weasyprint>=68.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]
